--- a/index.html
+++ b/index.html
@@ -39,11 +39,12 @@
 
 			<section class="intro clearfix standardLayout"><!--INTRODUCTION-->
 				<img src="img/headshot.png" alt="headshot">
-				<p><span class="introBlurb">Hi, I'm Gwen Kidera!</span><br>I'm a freelance designer and photographer based in Boston, MA. I first started photographing while studying in South Africa in college. I realized that I was unable to fully capture my experiences in words, so I turned to my camera and haven't looked back since.<br>I studied design and photography at the School of Museum of Fine Arts, Massachusetts College of Art and Design, and New England School of Photography. Most recently, I completed a course at General Assembly in Front-End Web Development where I built this site!</p>
+				<p><span class="introBlurb">Hi, I'm Gwen Kidera!</span><br>I'm a freelance designer and photographer based in Boston, MA. I first became interested in photography while studying in South Africa in college. I realized that I was unable to fully capture my experiences in words, so I turned to my camera and haven't looked back since!<br>I studied design and photography at the School of Museum of Fine Arts, Massachusetts College of Art and Design, and New England School of Photography. Most recently, I completed a course at General Assembly in Front-End Web Development where I built this site!</p>
 				<a href="#contactForm"><p class="button">Let's Chat!</p></a>
 			</section>
 
-			<section id="services" class="services standardLayout clearfix"><!--SERVICES-->
+			<div class="anchor" id="services"></div>
+			<section class="services standardLayout clearfix"><!--SERVICES-->
 				<h2 class="whiteh2">Services</h2>
 
 				<section class="skills photography">
@@ -68,43 +69,54 @@
 				</section>
 
 				<section class="photography">
-					<p class="hide centerWhite">Insert photo description here Insert photo description here Insert photo description here Insert photo description here Insert photo description here Insert photo description here Insert photo description here Insert photo description here...</p>
+					<p class="hide centerWhite">My first love is travel and documentary photography. I also shoot events, weddings, engagements, and portraits! I tend to shoot in natural lighting and relaxed settings. I like to capture smaller, special moments between the posed ones.</p>
 					<a href="http://www.photography.gwenkidera.com" target="_blank"><p class="hide button">Photography Work</p></a>
 				</section>
 
 				<section class="graphicDesign">
-					<p class="hide centerWhite">Insert design description here...</p>
+					<p class="hide centerWhite">Graphic design services include logos, icons, brochures, posters, illustrations, advertisements, annual reports, and more! You name it and I've probably worked on it at some point.</p>
 					<a href="http://design.gwenkidera.com" target="_blank"><p class="hide button">Design Work</p></a>
 				</section>
 
 				<section class="webDesign">
-					<p class="hide centerWhite">Insert web design description here...</p>
+					<p class="hide centerWhite">I primarily focus on front-end web development and have a working knowledge of HTML, CSS, and JavaScript. I have built several WordPress sites and work with the client throughout the process to make sure the site fits their needs. After launch, I train clients to make content edits themselves so they can manage updates going forward.</p>
 					<a href="http://design.gwenkidera.com" target="_blank"><p class="hide button">Web Design Work</p></a>
 				</section>
 			</section> 
 
-			<section id="featuredWork" class="featuredWork clear standardLayout"><!--FEATURED WORK-->
+			<span class="anchor" id="featuredWork"></span>
+			<section class="featuredWork clear standardLayout"><!--FEATURED WORK-->
 				<h2 class="purpleh2">Featured Work</h2>
 
 				<div>
-					<a href="http://design.gwenkidera.com/portfolio/ge-pitch-book" target="_blank"><img src="img/featured/ge-book.jpg" alt="GE Pitch Book"></a>
+					<a href="http://design.gwenkidera.com/portfolio/ge-pitch-book" target="_blank">
+						<p>I put together a set of five booklets for GE's top executives to learn about the benefits of moving their headquarters to Boston. The booklets were featured on Boston.com, the Boston Globe, and Boston Business Journal.</p>
+						<img src="img/featured/ge-book.jpg" alt="GE Pitch Book">
+					</a>
 					<h3>General Electric Pitch Book</h3>
 				</div>
 
 				<div>
-					<a href="http://design.gwenkidera.com/portfolio/imagine-boston-2030" target="_blank"><img src="img/featured/imagine.png" alt="Imagine Boston Skyline Illustration"></a>
+					<a href="http://design.gwenkidera.com/portfolio/imagine-boston-2030" target="_blank">
+						<p>Website, logo, and print collateral for Imagine Boston 2030, Boston's first citywide planning study in 50 years.</p>
+						<img src="img/featured/imagine.png" alt="Imagine Boston Skyline Illustration">
+					</a>
 					<h3>Imagine Boston 2030</h3>
 				</div>
 
 				<div>
-					<a href="http://design.gwenkidera.com/portfolio/film-cameras" target="_blank"><img src="img/featured/canon.jpg" alt="Canon Camera Illustration"></a>
+					<a href="http://design.gwenkidera.com/portfolio/film-cameras" target="_blank">
+						<img src="img/featured/canon.jpg" alt="Canon Camera Illustration">
+						<p>A set of hand drawn film camera illustrations for a fictional photography magazine, Deadpan.</p>
+					</a>
 					<h3>Film Camera Illustrations</h3>
 				</div>
 
 				<a href="http://design.gwenkidera.com" target="_blank"><p class="button clear">View More Work</p></a>
 			</section>	
 
-			<section id="experience" class="experience clear standardLayout"><!--EXPERIENCE-->
+			<div class="anchor" id="experience"></div>
+			<section class="experience clear standardLayout"><!--EXPERIENCE-->
 				<h2 class="whiteh2">Experience</h2>
 
 				<section>
@@ -187,47 +199,51 @@
 				<a href="link/gwen-kidera-resume.pdf" target="_blank"><p class="button clear">Download Resume</p></a>
 			</section>
 
-			<section id="testimonials" class="testimonials clear standardLayout"><!--TESTIMONIALS-->
+			<div class="anchor" id="testimonials"></div>
+			<section class="testimonials clear standardLayout clearfix"><!--TESTIMONIALS-->
 				<h2 class="purpleh2">Testimonials</h2>
 
-				<div>
-					<img src="img/chloe+alex.jpg" alt="Chloe and Alex">
-					<p>Chloe & Alex</p>
-					<p>We had the pleasure of working with Gwen in fall 2015 when she took our engagement photos. From the very start of the project, she was professional, enthusiastic and fun. She had wonderful ideas about unique places to take the photos, and great poses to work with. During the shoot, Gwen had an impeccable eye for lighting and backdrop. We’re extremely pleased with the outcome and will cherish these photos forever.</p>
-				</div>
+				<section>
+					<div>
+						<img src="img/chloe+alex.jpg" alt="Chloe and Alex">
+						<p>Chloe & Alex</p>
+						<p>We had the pleasure of working with Gwen in fall 2015 when she took our engagement photos. From the very start of the project, she was professional, enthusiastic and fun. She had wonderful ideas about unique places to take the photos, and great poses to work with. During the shoot, Gwen had an impeccable eye for lighting and backdrop. We’re extremely pleased with the outcome and will cherish these photos forever.</p>
+					</div>
 
-				<div>
-					<img src="img/alex+juliana.jpg" alt="Alex and Juliana">
-					<p>Alex & Juliana</p>
-					<p>Hiring Gwen was one of the best decisions I made for my wedding day. The whole day went by in such a happy blur and I’ll be able to relive those special moments she captured for the rest of my life. She made tactful and gentle suggestions to make shots better and had an eye for the little details. I am so grateful for the candid photos she snapped in between the posed shots. Thank you, Gwen!</p>
-				</div>
+					<div>
+						<img src="img/alex+juliana.jpg" alt="Alex and Juliana">
+						<p>Alex & Juliana</p>
+						<p>Hiring Gwen was one of the best decisions I made for my wedding day. The whole day went by in such a happy blur and I’ll be able to relive those special moments she captured for the rest of my life. She made tactful and gentle suggestions to make shots better and had an eye for the little details. I am so grateful for the candid photos she snapped in between the posed shots. Thank you, Gwen!</p>
+					</div>
 
-				<div>
-					<img src="img/liz+alex.jpg" alt="Liz and Alex">
-					<p>Liz & Alex</p>
-					<p>We contracted Gwen to take our engagement photos. She was extremely professional throughout the shoot and was willing to have fun with us, suggesting creative ideas. Her suggestion to include pictures on Acorn Street in Boston resulted in some unexpected and striking shots. We are very happy with our pictures and had a great time with her.</p>
-				</div>
+					<div>
+						<img src="img/liz+alex.jpg" alt="Liz and Alex">
+						<p>Liz & Alex</p>
+						<p>We contracted Gwen to take our engagement photos. She was extremely professional throughout the shoot and was willing to have fun with us, suggesting creative ideas. Her suggestion to include pictures on Acorn Street in Boston resulted in some unexpected and striking shots. We are very happy with our pictures and had a great time with her.</p>
+					</div>
 
-				<div>
-					<img src="img/chris.jpg" alt="Chris">
-					<p>Chris</p>
-					<p>I contracted Gwen Kidera to take a series of family photographs.  I knew it was going to be a challenge with thirteen people, including five children, two under the age of two.  Gwen was very professional and great with the kids.  She photographed as many different groupings as we wanted and was very accommodating as we came up with different ideas.  The photos turned out great and everyone was pleased.  I would recommend her highly.</p>
-				</div>
+					<div class="hide">
+						<img src="img/chris.jpg" alt="Chris">
+						<p>Chris</p>
+						<p>I contracted Gwen Kidera to take a series of family photographs.  I knew it was going to be a challenge with thirteen people, including five children, two under the age of two.  Gwen was very professional and great with the kids.  She photographed as many different groupings as we wanted and was very accommodating as we came up with different ideas.  The photos turned out great and everyone was pleased.  I would recommend her highly.</p>
+					</div>
 
-				<div>
-					<img src="img/jennifer.jpg" alt="Jennifer">
-					<p>Jennifer</p>
-					<p>Gwen photographed my wedding with the assistance of a second shooter. Her energy and enthusiasm as well as her commitment to getting that great shot were so very appreciated. She was flexible and accommodating to our unique requests including adding our beloved dog into photos and location and wardrobe changes. Gwen has a great eye for that special moment and our photographs are beautiful. She was very efficient at getting our photographs to us and I would highly recommend her to anyone!</p>
-				</div>
+					<div class="hide">
+						<img src="img/jennifer.jpg" alt="Jennifer">
+						<p>Jennifer</p>
+						<p>Gwen photographed my wedding with the assistance of a second shooter. Her energy and enthusiasm as well as her commitment to getting that great shot were so very appreciated. She was flexible and accommodating to our unique requests including adding our beloved dog into photos and location and wardrobe changes. Gwen has a great eye for that special moment and our photographs are beautiful. She was very efficient at getting our photographs to us and I would highly recommend her to anyone!</p>
+					</div>
 
-				<div>
-					<img src="img/tracy.jpg" alt="Tracy">
-					<p>Tracy</p>
-					<p>Gwen covered a recent birthday party, documenting the night in pictures. She was extremely professional through the entire process, as well as friendly and easy to work with. We were extremely happy with the results and I would highly recommend her work.</p>
-				</div>
+					<div class="hide">
+						<img src="img/tracy.jpg" alt="Tracy">
+						<p>Tracy</p>
+						<p>Gwen covered a recent birthday party, documenting the night in pictures. She was extremely professional through the entire process, as well as friendly and easy to work with. We were extremely happy with the results and I would highly recommend her work.</p>
+					</div>
+				</section>
 			</section>
 
-			<section id="contactForm" class="contact standardLayout clear"><!--CONTACT-->   
+			<div class="anchor" id="contactForm"></div>
+			<section class="contact standardLayout clear"><!--CONTACT-->   
 				
 				<h2 class="purpleh2">Contact</h2>
 
