Subnav added - not fully functional yet

--- a/index.html
+++ b/index.html
@@ -25,12 +25,19 @@
 				<img src="img/header-logo.png" alt="logo">
 			</header>
 
-			<nav class="mainNav">
-				  <a href="#services">Services</a>
-				  <a href="#featuredWork">Featured Work</a>
-				  <a href="#experience">Experience</a>
-				  <a href="#testimonials">Testimonials</a>
-				  <a href="#contactForm">Contact</a>
+			<nav class="clearfix mainNav">
+				  <ul>
+				  	<li><a href="#services">Services</a></li>
+				  	<li class="topNav"><a href="#featuredWork">Featured Work</a>
+				  		<ul>
+				  			<li class="subNav"><a href="http://design.gwenkidera.com">Design</a></li>
+				  			<li class="subNav"><a href="http://www.photography.gwenkidera.com">Photography</a></li>
+				  		</ul>
+				  	</li>
+				  	<li><a href="#experience">Experience</a></li>
+				  	<li><a href="#testimonials">Testimonials</a></li>
+				  	<li><a href="#contactForm">Contact</a></li>
+				</ul>
 			</nav>
 
 			<div id="backToTop">
