Carousel is working!

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 				  	<li><a href="#services">Services</a></li>
 				  	<li class="topNav"><a href="#featuredWork">Featured Work</a>
 				  		<ul>
-				  			<li class="subNav"><a href="http://design.gwenkidera.com">Design</a></li>
-				  			<li class="subNav"><a href="http://www.photography.gwenkidera.com">Photography</a></li>
+				  			<li class="subNav"><a href="http://design.gwenkidera.com" target="_blank">Design</a></li>
+				  			<li class="subNav"><a href="http://www.photography.gwenkidera.com" target="_blank">Photography</a></li>
 				  		</ul>
 				  	</li>
 				  	<li><a href="#experience">Experience</a></li>
@@ -210,43 +210,49 @@
 			<section class="testimonials clear standardLayout clearfix"><!--TESTIMONIALS-->
 				<h2 class="purpleh2">Testimonials</h2>
 
-				<section>
-					<div>
-						<img src="img/chloe+alex.jpg" alt="Chloe and Alex">
-						<p>Chloe & Alex</p>
-						<p>We had the pleasure of working with Gwen in fall 2015 when she took our engagement photos. From the very start of the project, she was professional, enthusiastic and fun. She had wonderful ideas about unique places to take the photos, and great poses to work with. During the shoot, Gwen had an impeccable eye for lighting and backdrop. We’re extremely pleased with the outcome and will cherish these photos forever.</p>
-					</div>
+				<img src="img/arrow_left.png" alt="arrow" class="arrow">
 
-					<div>
-						<img src="img/alex+juliana.jpg" alt="Alex and Juliana">
-						<p>Alex & Juliana</p>
-						<p>Hiring Gwen was one of the best decisions I made for my wedding day. The whole day went by in such a happy blur and I’ll be able to relive those special moments she captured for the rest of my life. She made tactful and gentle suggestions to make shots better and had an eye for the little details. I am so grateful for the candid photos she snapped in between the posed shots. Thank you, Gwen!</p>
-					</div>
+				<section id="image-container-wrapper">
+					<section id="image-container">
+						<div id="chloeAlex">
+							<img src="img/chloe+alex.jpg" alt="Chloe and Alex">
+							<p>Chloe & Alex</p>
+							<p>We had the pleasure of working with Gwen in fall 2015 when she took our engagement photos. From the very start of the project, she was professional, enthusiastic and fun. She had wonderful ideas about unique places to take the photos, and great poses to work with. During the shoot, Gwen had an impeccable eye for lighting and backdrop. We’re extremely pleased with the outcome and will cherish these photos forever.</p>
+						</div>
 
-					<div>
-						<img src="img/liz+alex.jpg" alt="Liz and Alex">
-						<p>Liz & Alex</p>
-						<p>We contracted Gwen to take our engagement photos. She was extremely professional throughout the shoot and was willing to have fun with us, suggesting creative ideas. Her suggestion to include pictures on Acorn Street in Boston resulted in some unexpected and striking shots. We are very happy with our pictures and had a great time with her.</p>
-					</div>
+						<div id="alexJuliana">
+							<img src="img/alex+juliana.jpg" alt="Alex and Juliana">
+							<p>Alex & Juliana</p>
+							<p>Hiring Gwen was one of the best decisions I made for my wedding day. The whole day went by in such a happy blur and I’ll be able to relive those special moments she captured for the rest of my life. She made tactful and gentle suggestions to make shots better and had an eye for the little details. I am so grateful for the candid photos she snapped in between the posed shots. Thank you, Gwen!</p>
+						</div>
 
-					<div class="hide">
-						<img src="img/chris.jpg" alt="Chris">
-						<p>Chris</p>
-						<p>I contracted Gwen Kidera to take a series of family photographs.  I knew it was going to be a challenge with thirteen people, including five children, two under the age of two.  Gwen was very professional and great with the kids.  She photographed as many different groupings as we wanted and was very accommodating as we came up with different ideas.  The photos turned out great and everyone was pleased.  I would recommend her highly.</p>
-					</div>
+						<div id="lizAlex">
+							<img src="img/liz+alex.jpg" alt="Liz and Alex">
+							<p>Liz & Alex</p>
+							<p>We contracted Gwen to take our engagement photos. She was extremely professional throughout the shoot and was willing to have fun with us, suggesting creative ideas. Her suggestion to include pictures on Acorn Street in Boston resulted in some unexpected and striking shots. We are very happy with our pictures and had a great time with her.</p>
+						</div>
 
-					<div class="hide">
-						<img src="img/jennifer.jpg" alt="Jennifer">
-						<p>Jennifer</p>
-						<p>Gwen photographed my wedding with the assistance of a second shooter. Her energy and enthusiasm as well as her commitment to getting that great shot were so very appreciated. She was flexible and accommodating to our unique requests including adding our beloved dog into photos and location and wardrobe changes. Gwen has a great eye for that special moment and our photographs are beautiful. She was very efficient at getting our photographs to us and I would highly recommend her to anyone!</p>
-					</div>
+						<div id="chris">
+							<img src="img/chris.jpg" alt="Chris">
+							<p>Chris</p>
+							<p>I contracted Gwen Kidera to take a series of family photographs.  I knew it was going to be a challenge with thirteen people, including five children, two under the age of two.  Gwen was very professional and great with the kids.  She photographed as many different groupings as we wanted and was very accommodating as we came up with different ideas.  The photos turned out great and everyone was pleased.  I would recommend her highly.</p>
+						</div>
 
-					<div class="hide">
-						<img src="img/tracy.jpg" alt="Tracy">
-						<p>Tracy</p>
-						<p>Gwen covered a recent birthday party, documenting the night in pictures. She was extremely professional through the entire process, as well as friendly and easy to work with. We were extremely happy with the results and I would highly recommend her work.</p>
-					</div>
+						<div id="jennifer">
+							<img src="img/jennifer.jpg" alt="Jennifer">
+							<p>Jennifer</p>
+							<p>Gwen photographed my wedding with the assistance of a second shooter. Her energy and enthusiasm as well as her commitment to getting that great shot were so very appreciated. She was flexible and accommodating to our unique requests including adding our beloved dog into photos and location and wardrobe changes. Gwen has a great eye for that special moment and our photographs are beautiful. She was very efficient at getting our photographs to us and I would highly recommend her to anyone!</p>
+						</div>
+
+						<div id="tracy">
+							<img src="img/tracy.jpg" alt="Tracy">
+							<p>Tracy</p>
+							<p>Gwen covered a recent birthday party, documenting the night in pictures. She was extremely professional through the entire process, as well as friendly and easy to work with. We were extremely happy with the results and I would highly recommend her work.</p>
+						</div>
+					</section>
 				</section>
+				<img src="img/arrow_right.png" class="arrow" alt="arrow">
+				
 			</section>
 
 			<div class="anchor" id="contactForm"></div>
