Fixed issues with back to top and sticky nav margins

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 			<section class="intro clearfix standardLayout"><!--INTRODUCTION-->
 				<img src="img/headshot.png" alt="headshot">
-				<p><span class="introBlurb">Hi, I'm Gwen Kidera!</span><br>I'm a freelance designer and photographer based in Boston, MA. I first became interested in photography while studying in South Africa in college. I realized that I was unable to fully capture my experiences in words, so I turned to my camera and haven't looked back since!<br>I studied design and photography at the School of Museum of Fine Arts, Massachusetts College of Art and Design, and New England School of Photography. Most recently, I completed a course at General Assembly in Front-End Web Development where I built this site!</p>
+				<p><span class="introBlurb">Hi, I'm Gwen Kidera!</span><br>I'm a freelance designer and photographer based in Boston, MA. I first became interested in photography while studying in South Africa in college. I realized that I was unable to fully capture my experiences in words, so I turned to my camera and haven't looked back since!</p><p>I studied design and photography at the School of Museum of Fine Arts, Massachusetts College of Art and Design, and New England School of Photography. Most recently, I completed a course at General Assembly in Front-End Web Development where I built this site!</p>
 				<a href="#contactForm"><p class="button">Let's Chat!</p></a>
 			</section>
 
